@@ -1,3 +1,9 @@
+2008-08-12  Richard Purdie  <rpurdie@openedhand.com>
+
+	* psplash.c:
+	Allow newline terminated commands as well as null terminated ones 
+	through the fifo.
+
 2008-05-27  Robert Bragg  <bob@openedhand.com>
 	
 	* psplash-fb.c:
